--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-html,body {
-    height: 100%;
-}
-
-
 .main-text {
     position: relative;
     font-size: 20px;
@@ -32,7 +27,9 @@ html,body {
     float: left;
     font-size: 20px;
     background-image: url("../images/index-redwood.jpg");
-    -webkit-background-size: 100%;
+    -webkit-background-size: 1200px;
+    -moz-background-size: 1200px;
+    -o-background-size: 1200px;
     background-size: 1200px;
 }
 
@@ -43,7 +40,6 @@ html,body {
     background-color: #0d0d0d;
     z-index: 10;
     display: block;
-
 }
 
 
@@ -90,31 +86,26 @@ html,body {
     font-size: 55px;
     color: white;
     font-weight: bold;
-    /*padding: 0.em;*/
     vertical-align: center;
     line-height: normal;
 }
 
 
 .frosted {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     color: white;
     z-index: 10;
     display: block;
     text-shadow: 2px 2px black;
-
 }
 
 
 #static-endor {
     width: 50%;
     height: auto;
-    /*position: relative;*/
-    position: relative;
-    top: 11.3em;
-    /*float: right;*/
-    /*margin: 0 auto 0 auto;*/
-    /*display: inline-block;*/
+    position: absolute;
+    top: 96%;
+    right: 24%;
     margin: 0 auto;
 }
 
@@ -123,8 +114,9 @@ html,body {
     width: 90%;
     height: 90%;
     float: right;
-    position: relative;
-    bottom: 49em;
+    position: absolute;
+    left: 50%;
+    top: 20%;
 }
 
 
@@ -138,7 +130,6 @@ html,body {
     margin: 0 auto;
     font-size: 20px;
     z-index: 0;
-
 }
 
 
@@ -186,5 +177,5 @@ html,body {
 
 
 footer {
-    top: 40em;
+    top: 10em;
 }
