--- a/css/profile.css
+++ b/css/profile.css
@@ -1,7 +1,6 @@
 .profile-info {
     width: 80%;
     margin: 0 auto;
-    /*background-color: red;*/
 }
 
 .pic-circle {
@@ -34,53 +33,53 @@
     border-radius: 5px;
     border: 1px solid #333333;
     min-width: 500px;
-    /*background-color: red;*/
-
 }
+
 
 #costume-arrow {
     height: 3.5em;
-    /*bottom: 5em;
-    left: 50%;*/
-    /*margin-left: -50px;*/
     float: right;
     z-index: 0;
     -webkit-transition: 0.4s ease-in-out;
     -moz-transition: 0.4s ease-in-out;
     -o-transition: 0.4s ease-in-out;
     transition: 0.4s ease-in-out;
-    /*transform: rotate(-90deg);*/
-
 }
+
 
 .rotation {
-    transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg);
+    -webkit-transition-delay: 0s;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
     transition-delay: 0s;
 }
+
 
 #button-container{
     margin-top: 2em;
     height: 3.5em;
 }
 
+
 .info-line {
     width: 100%;
     height: 2.5em;
     display: inline-block;
     font-size: 20px;
-    padding: 0;
-    margin: 0;
     margin: 0.25em 0;
-    /*background-color: green;*/
 }
+
 
 .info-type {
     vertical-align: middle;
-    /*display: inline;*/
     line-height: 2.5em;
     height: 2.5em;
 }
+
 
 .box {
     float: right;
@@ -95,6 +94,7 @@
     padding-left: 1em;
 }
 
+
 .button-outfit {
     display: inline;
     line-height: 3.5em;
@@ -104,25 +104,31 @@
     font-size: 15px;
     color: #ffffff;
     -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border-radius: 5px;
     background-color: transparent;
     border: 1px solid #333333;
     -webkit-transition: 0.6s ease-in-out 0s;
     -moz-transition: 0.6s ease-in-out 0s;
+    -o-transition: 0.6s ease-in-out 0s;
     transition: 0.6s ease-in-out 0s;
     text-transform: uppercase;
     color: #ffffff;
     cursor: pointer;
 }
 
+
 .button-outfit:hover {
     background-color: #d3d3d3;
     color: #000000;
 }
 
+
 .button-outfit:active {
     background-color: green;
 }
+
 
 .button-outfit:focus {
     outline: none;
@@ -138,6 +144,8 @@
     margin-bottom: 2em;
     top: 2em;
     -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #333333;
 }
@@ -157,6 +165,8 @@
 .costume-box {
     float: right;
     -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #333333;
     width: 65%;
@@ -173,6 +183,7 @@
     height: 2.5em;
     padding-left: 1em;
 }
+
 
 .costume-info {
     width: 100%;
