abandoned upload image. Changed twitter functionality on event.html to share

--- a/css/event.css
+++ b/css/event.css
@@ -56,6 +56,7 @@ body{
 
 
 .social-media {
+    text-align: center;
     float: left;
     position: fixed;
     top: 10em;
@@ -88,4 +89,10 @@ body{
 
 .spacer {
     height: 130em;
+}
+
+
+.share-text {
+    font-size: 25px;
+    padding: 1em;
 }
